2007-08-30  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbaseenums.h: remove extraneous comma.

2007-08-30  Michael Natterer  <mitch@gimp.org>

	* app/gui/sync-menu.c: take over cosmetic fix from upstream.

	* configure.in: add HAVE_CARBON as AM_CONDITIONAL

	* menus/image-menu.xml.in: add the Help menu to the image menu.

	* menus/Makefile.am
	* menus/menus.xsl: filter it away if we are not on carbon.

	* app/menus/menus.c: added the "help" action group to the image UI
	manager.

2007-08-30  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/tinyscheme/scheme.[ch]
	* plug-ins/script-fu/scheme-wrapper.h: Shuffeled some
	code around to have scheme.c not include scheme-wrapper.h.

2007-08-30  Raphaël Quinet  <raphael@gimp.org>

	* data/tips/gimp-tips.xml.in: expanded old tip and mentioned that
	it is possible to configure most window managers so that they do
	not steal the Alt key from the applications.  Fixes bug #471565.

2007-08-30  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/pcx.c: applied modified patch from Nils
	Philippsen that adds more sanity checks when loading and saving
	images.  Fixes the reopened bug #471189.

2007-08-30  Michael Natterer  <mitch@gimp.org>

	First version of global menubar support for OSX. Work in progress.

	* app/gui/Makefile.am
	* app/gui/sync-menu.[ch]: new files containing code that takes
	a GtkMenuShell and proxies it in the OSX global menubar. Taken
	from http://developer.imendio.com/projects/gtk-macosx/menubar

	* app/gui/gui.c: put the global image popup menu to the menubar.

	* app/dialogs/preferences-dialog.c
	* app/display/gimpdisplayshell.c
	* app/widgets/gimptoolbox.c: #ifdef out all menubars in windows.

	* app/Makefile.am (AM_LDFLAGS): add $(CARBON_LDFLAGS)

2007-08-30  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/common/scatter_hsv.c: Randomizing hue of desaturated
	pixels before increasing saturation. Fixes #471476.
