@@ -13,6 +13,7 @@ The following people have contributed code to GIMP:
  Sven Anders
  Henrik Brix Andersen
  Karl-Johan Andersson
+ Nicola Archibald
  John Beale
  Zach Beane
  Tom Bech
@@ -133,6 +134,7 @@ The following people have contributed code to GIMP:
  Chris Mohler
  Chris Moller
  David Monniaux
+ Tim Mooney
  Adam D Moss
  Balazs Nagy
  Yukihiro Nakai
@@ -157,6 +159,7 @@ The following people have contributed code to GIMP:
  Akkana Peck
  Asbjorn Pettersen
  Mike Phillips
+ Nils Philippsen
  Ari Pollak
  Raphaël Quinet
  Tom Rathborne
@@ -206,6 +209,7 @@ The following people have contributed code to GIMP:
  Calvin Williamson
  Matthew Wilson
  Karl Günter Wünsch
+ Yoshinori Yamakawa
  Shirasaki Yasuhiro
 
 
