@@ -1,3 +1,10 @@
+2007-08-30  Raphaël Quinet  <raphael@gimp.org>
+
+	* authors.xml: updated some entries, added contributors: Nicola
+	Archibald, Tim Mooney, Nils Philippsen and Yoshinori Yamakawa
+
+	* AUTHORS: regenerated.
+
 2007-08-30  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/gimpbaseenums.h: remove extraneous comma.
